--- a/index.html
+++ b/index.html
@@ -4,15 +4,46 @@
     <meta charset="utf-8">
     <title>Web Calculator</title>
   </head>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css"/>  
   <body>
     <h1>The Web Calculator</h1>
     <div id="calculator">
-      <button>+</button>
-      <button>-</button>
-      <button>*</button>
-      <button>/</button>
+      <table>
+        <tr>
+          <td colspan="5"><input type="text" id="result_field"></td>
+        </tr>
+        <tr>
+          <td><button>1</button></td>
+          <td><button>2</button></td>
+          <td><button>3</button></td>
+          <td><button>*</button></td>
+          <td><button>/</button></td>
+        </tr>
+        <tr>
+          <td><button>4</button></td>
+          <td><button>5</button></td>
+          <td><button>6</button></td>
+          <td><button>+</button></td>
+          <td><button>-</button></td>          
+        </tr>
+        <tr>
+          <td><button>7</button></td>          
+          <td><button>8</button></td>          
+          <td><button>9</button></td>          
+          <td><button>^</button></td>          
+          <td rowspan="2"><button style="height: 185px;">=</button></td>          
+        </tr>
+        <tr>
+          <td><button>+-</button></td>          
+          <td><button>0</button></td>          
+          <td><button>.</button></td>          
+          <td><button>C</button></td>          
+        </tr>
+      </table>
     </div>
     <i>- Created by Matias Storm</i>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="calculator.js"></script>
   </body>
+  
 </html>
