--- a/index.html
+++ b/index.html
@@ -13,37 +13,38 @@
           <td colspan="5"><input type="text" id="result_field"></td>
         </tr>
         <tr>
-          <td><button>1</button></td>
-          <td><button>2</button></td>
-          <td><button>3</button></td>
-          <td><button>*</button></td>
-          <td><button>/</button></td>
+          <td><button id="1">1</button></td>
+          <td><button id="2">2</button></td>
+          <td><button id="3">3</button></td>
+          <td><button id="times">*</button></td>
+          <td><button id="divide">/</button></td>
         </tr>
         <tr>
-          <td><button>4</button></td>
-          <td><button>5</button></td>
-          <td><button>6</button></td>
-          <td><button>+</button></td>
-          <td><button>-</button></td>          
+          <td><button id="4">4</button></td>
+          <td><button id="5">5</button></td>
+          <td><button id="6">6</button></td>
+          <td><button id="plus">+</button></td>
+          <td><button id="minus">-</button></td>          
         </tr>
         <tr>
-          <td><button>7</button></td>          
-          <td><button>8</button></td>          
-          <td><button>9</button></td>          
-          <td><button>^</button></td>          
-          <td rowspan="2"><button style="height: 185px;">=</button></td>          
+          <td><button id="7">7</button></td>          
+          <td><button id="8">8</button></td>          
+          <td><button id="9">9</button></td>          
+          <td><button id="power">^</button></td>          
+          <td rowspan="2"><button style="height: 185px;" id="equal">=</button></td>          
         </tr>
         <tr>
-          <td><button>+-</button></td>          
-          <td><button>0</button></td>          
-          <td><button>.</button></td>          
-          <td><button>C</button></td>          
+          <td><button id="negate">+-</button></td>          
+          <td><button id="0">0</button></td>          
+          <td><button id="dot">.</button></td>          
+          <td><button id="clear">C</button></td>          
         </tr>
       </table>
     </div>
     <i>- Created by Matias Storm</i>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="calculator.js"></script>
+
   </body>
   
 </html>
