--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <td class="separator"><button id="3">3</button></td>
           <td><button id="clear">C</button></td>          
           <td><button id="delete">&larr;</button></td>  
-          <td><button id="(">(</button></td>  
+          <td><button id="right_par">(</button></td>  
         </tr>
         <tr>
           <td><button id="4">4</button></td>
@@ -26,7 +26,7 @@
           <td class="separator"><button id="6">6</button></td>
           <td><button id="times">*</button></td>
           <td><button id="divide">/</button></td>
-          <td><button id=")">)</button></td>  
+          <td><button id="left_par">)</button></td>  
         </tr>
         <tr>
           <td><button id="7">7</button></td>          
