--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="calculator.js"></script>
     <script>
       c = new Calculator($("#result_field"));
+      c.clear();
       numbers = ["1", "2", "3", "4", "5", "6", "7", "8", "9", "0"];
       
       numbers.forEach(val =>{
@@ -84,8 +85,7 @@
                     58: "#4" ,    106: "#4",     59:  "#5",     107: "#5",
                     60: "#4" ,    108: "#4",     61:  "#5",     109: "#5",
                     13: "#equal", 106: "#times", 109: "#minus", 107: "#plus",
-                    67: "#clear", 80:  "#power"}
-        console.log(event.which);
+                    67: "#clear", 80:  "#power", 78:  "#negate"}
         $(dict[event.which]).trigger("click");
       })
       
